<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/dialog">

    <EditText
        android:id="@+id/productEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/error_button_slyle"
        android:textColor="@color/yellowMain"
        android:textColorHint="@color/yellowLight"
        android:padding="10dp"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/hintName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/weightEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/error_button_slyle"
        android:textColor="@color/yellowMain"
        android:textColorHint="@color/yellowLight"
        android:padding="10dp"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/hintWeight"
        android:inputType="number" />

    <EditText
        android:id="@+id/valueEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:background="@drawable/error_button_slyle"
        android:textColor="@color/yellowMain"
        android:textColorHint="@color/yellowLight"
        android:padding="10dp"
        android:hint="@string/hintPrice"
        android:inputType="number" />
</LinearLayout>