<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".IntroActivity">

    <!--
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/intro_background" /> -->



    <Button
        android:id="@+id/nextBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:background="#00FFFFFF"
        android:text="@string/next"
        android:textColor="@color/redMain"
        />
    <Button
        android:id="@+id/backBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        android:background="#00FFFFFF"
        android:text="@string/back"
        android:textColor="@color/redMain"
        />

    <ImageView
        android:id="@+id/price"
        android:layout_width="341dp"
        android:layout_height="409dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="35dp"
        app:srcCompat="@drawable/stones" />

    <TextView
        android:id="@+id/enterPrice"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_below="@+id/price"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="57dp"
        android:gravity="center"
        android:text="@string/enterPrice"
        android:textColor="@color/redMain"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/minPrice"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/enterPrice"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="115dp"
        android:background="@drawable/edit_text_red_slyle"
        android:ems="10"
        android:hint="@string/minPrice"
        android:textSize="17dp"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:padding="10dp"
        android:textColor="@color/redMain"
        android:textColorHint="@color/redLight"
        android:textCursorDrawable="@color/redMain" />

</RelativeLayout>